--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.3.0",
     "@material/textfield": "^14.0.0",
     "bootstrap": "^5.1.3",
+    "mdb-angular-ui-kit": "^2.3.0",
     "ngx-avatar": "^4.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
