--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@material/textfield": "^14.0.0",
+    "alife-file-to-base64": "^0.0.4",
     "bootstrap": "^5.1.3",
     "mdb-angular-ui-kit": "^2.3.0",
     "ngx-avatar": "^4.1.0",
