--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@material/textfield": "^14.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
+    "alife-file-to-base64": "^0.0.4",
     "angular-calendar": "^0.29.0",
     "angularx-flatpickr": "^6.6.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "mdb-angular-ui-kit": "^2.3.0",
-    "ng-bootstrap": "^1.6.3",
+    "ng-bootstrap": "^0.46.0",
     "ngx-avatar": "^4.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
