--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "angularx-flatpickr": "^6.6.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
+    "flatpickr": "^4.6.13",
     "mdb-angular-ui-kit": "^2.3.0",
     "ng-bootstrap": "^0.46.0",
     "ngx-avatar": "^4.1.0",
+    "ngx-toastr": "^14.3.0",
     "pdfmake": "^0.2.5",
     "pdfmake-wrapper": "^2.1.3",
     "rxjs": "~7.5.0",
