--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "@popperjs/core": "^2.10.2",
     "alife-file-to-base64": "^0.0.4",
     "angular-calendar": "^0.29.0",
+    "angular-datatables": "^13.0.0",
     "angularx-flatpickr": "^6.6.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "datatables.net": "^1.12.1",
+    "datatables.net-dt": "^1.12.1",
     "date-fns": "^2.28.0",
     "flatpickr": "^4.6.13",
+    "jquery": "^3.6.0",
     "mdb-angular-ui-kit": "^2.3.0",
     "ng-bootstrap": "^0.46.0",
     "ngx-avatar": "^4.1.0",
@@ -43,7 +47,9 @@
     "@angular-devkit/build-angular": "~13.3.7",
     "@angular/cli": "~13.3.7",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/datatables.net": "^1.10.22",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
     "@types/pdfmake": "^0.1.21",
     "jasmine-core": "~4.0.0",
