--- a/package.json
+++ b/package.json
@@ -26,10 +26,16 @@
     "angular-calendar": "^0.29.0",
     "angularx-flatpickr": "^6.6.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
+    "chart.js": "^3.8.0",
     "date-fns": "^2.28.0",
+    "flatpickr": "^4.6.13",
     "mdb-angular-ui-kit": "^2.3.0",
     "ng-bootstrap": "^0.46.0",
     "ngx-avatar": "^4.1.0",
+    "ngx-toastr": "^14.3.0",
+    "pdfmake": "^0.2.5",
+    "pdfmake-wrapper": "^2.1.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -40,6 +46,7 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/pdfmake": "^0.1.21",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
