--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "angularx-flatpickr": "^6.6.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
-   
+    "chart.js": "^3.8.0",
     "date-fns": "^2.28.0",
     "flatpickr": "^4.6.13",
     "jquery": "^3.6.0",
